  * Add patches/arm/local-softfloat.diff (support for arm softfloat).  (Closes:
    #358772)
  * debian/rules.d/control.mk: Add arm-softfloat to the architectures list.
  * Do a separate pass for the udeb package, so that it could use different
    build options.
  * Set the minimum kernel to 2.6.1 for the udeb package, except for i386,
    m68k, mips, mipsel, powerpc and s390.

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 19 May 2006 05:49:18 +0000

glibc (2.3.6-9) unstable; urgency=low

  * Don't run make install with -j, as it is not SMP safe.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 18 May 2006 17:54:39 +0000

glibc (2.3.6-8) unstable; urgency=low

  [ Aurelien Jarno ]
  * Disable m68k/local-mathinline_h.diff, it breaks the build of the glibc on
    m68k.
  * Add all/local-pt_BR.diff (fix a small typo in the Brazilian Portuguese
    translation) by Guilherme de S. Pastore.  (Closes: #319422)
  * Add hurd-i386/local-mlock.diff (fix mlock on Hurd/Mach), by Samuel
    Thibault.  (Closes: #349204)
  * sysdeps/i386.mk: build glibc with --with-__thread on i386.
  * debian/local/manpages: s/woody/etch/g.  (Closes: #364198)
  * sysdeps/depflags.pl: bumped the versioned conflicts with initrd-tools
    to 0.1.84.1, as older version use LD_ASSUME_KERNEL=2.4.  (Closes: #365647)
  * Follow symlinks while checking for other copy of the C library.
    (Closes: #365838)
  * Invalidate nscd cache when calling /etc/init.d/nscd restart.
    (Closes: #365676, #365677)
  * /usr/sbin/tzconfig: set umask to 022.  (Closes: #367145)
  * debian/main/control.in: make locales Replaces: lliurex-belocs-locales-data.
    (Closes: #365651)
  * Move the NJOBS part to debian/sysdeps/(system) to debian/rules.
  * debian/debhelper.in/libc-otherbuild.postinst: fixed parsing of
    /etc/ld.so.hwcappkgs.  (Closes: #364666)

  [ Denis Barbier ]
  * Fix location of locales/NEWS.Debian.  Thanks Matthijs Mohlmann.
    (Closes: #362763)