@@ -10,6 +10,7 @@ glibc (2.3.6-10) UNRELEASED; urgency=low
     build options.
   * Set the minimum kernel to 2.6.1 for the udeb package, except for i386,
     m68k, mips, mipsel, powerpc and s390.
+  * Enable the locales-all package.  (Closes: #308020)
 
  -- Aurelien Jarno <aurel32@debian.org>  Fri, 19 May 2006 05:49:18 +0000
 
